--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,38 @@ html {
 }
 
 .startext {
-  font-size: 2vw;
-  color: rgb(109, 45, 25);
+  background-color: rgba(90, 112, 117, 0.226);
+  padding: 0.3vw;
+  border-radius: 0.2vw;
+  margin-top: 7vw;
+  font-size: 2.2vw;
   text-align: center;
+  color: rgb(19, 18, 18); 
+}
+
+.bantext {
+  position: absolute;
+  top: 0;
+  z-index: 2;
+  width:100%;
+  height: 30vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.lowertext {
+  background-color: rgba(90, 112, 117, 0.377);
+  padding: 0.3vw;
+  border-radius: 0.2vw;
+  margin-top: 1vw;
+  font-size: 1.9vw;
+  color: rgb(20, 19, 19);
+}
+
+.startextpar {
+  position: relative;
 }
 
 .signpar {
@@ -26,6 +55,16 @@ html {
 
 body {
    width: 100%;
+}
+
+.banner {
+  width: 100%;
+  position: absolute;
+  top: 0;
+}
+
+.banner2 {
+  display: none;
 }
 
 #game {
@@ -214,9 +253,9 @@ body {
     border: solid;
     border-width: 0.2vw;
     border-color: gray;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
 }
 
 .sea {
@@ -532,6 +571,58 @@ body {
   top: 47vw;
   width: 100%;
   height: 23vw;
+}
+
+.banner {
+  display: none;
+}
+
+
+.banner2 {
+  display: inline;
+  width: 118%;
+  position: absolute;
+  top: 0;
+}
+
+
+.startext {
+  background-color: rgba(90, 112, 117, 0.39);
+  padding: 0.3vw;
+  border-radius: 0.2vw;
+  margin-top: 30vw;
+  font-size: 3.7vw;
+  width: 97%;
+  line-height: 1.1;
+  text-align: center;
+  color: rgb(0, 0, 0); 
+}
+
+.bantext {
+  position: absolute;
+  top: 0;
+  z-index: 2;
+  width:100%;
+  height: 75vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.lowertext {
+  background-color: rgba(90, 112, 117, 0.377);
+  padding: 0.3vw;
+  border-radius: 0.2vw;
+  margin-top: 2vw;
+  font-size: 3.7vw;
+  color: rgb(0, 0, 0);
+  width: 97%;
+  text-align: center;
+}
+
+.startextpar {
+  position: relative;
 }
 
 
